Perkin-UAT/force-app/main/default/objects/SMAX_PS_OwnedByCompanyObjMapping__mdt/SMAX_PS_OwnedByCompanyObjMapping__mdt.object-meta.xml
<CustomObject>
    <description>Service-related Salesforce Object mappings that are leveraged to assist in deciding Owned by Company on Salesforce records</description>
    <label>Owned By Company Object Mapping</label>
    <pluralLabel>Owned By Company Mappings</pluralLabel>
</CustomObject>