Perkin-UAT/force-app/main/default/objects/SMAX_PS_OwnedByCompanyObjMapping__mdt/fields/SMAX_PS_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Flag/ indicator signifying is the object mapping record should be used</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>