Perkin-UAT/force-app/main/default/objects/SMAX_PS_OwnedByCompanyObjMapping__mdt/fields/SMAX_PS_Primary_Field__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Primary_Field__c</fullName>
    <description>Salesforce field related to the selected Salesforce object</description>
    <label>Primary Field</label>
    <metadataRelationshipControllingField>SMAX_PS_OwnedByCompanyObjMapping__mdt.SMAX_PS_SObject__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Owned_By_Company_Mappings</relationshipLabel>
    <relationshipName>Owned_By_Company_Mappings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>