Perkin-UAT/force-app/main/default/objects/SMAX_PS_OwnedByCompanyObjMapping__mdt/fields/SMAX_PS_Primary_Field_Type__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Primary_Field_Type__c</fullName>
    <description>Defines the primary value type (Service Plant or Sales Org)</description>
    <label>Primary Field Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service Plant</fullName>
                <default>true</default>
                <label>Service Plant</label>
            </value>
            <value>
                <fullName>Sales Org</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>