Perkin-UAT/force-app/main/default/objects/SMAX_PS_OwnedByCompanyObjMapping__mdt/fields/SMAX_PS_Secondary_Field__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Secondary_Field__c</fullName>
    <description>Secondary Salesforce field related to the Salesforce object</description>
    <label>Secondary Field</label>
    <metadataRelationshipControllingField>SMAX_PS_OwnedByCompanyObjMapping__mdt.SMAX_PS_SObject__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Owned_By_Company_Mappings1</relationshipLabel>
    <relationshipName>Owned_By_Company_Mappings1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>