Perkin-UAT/force-app/main/default/objects/SMAX_PS_OwnedByCompanyObjMapping__mdt/fields/SMAX_PS_SObject__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_SObject__c</fullName>
    <description>Salesforce standard or custom object selection for primary object</description>
    <label>SObject</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Owned_By_Company_Mappings</relationshipLabel>
    <relationshipName>Owned_By_Company_Mappings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>