Perkin-UAT/force-app/main/default/objects/SMAX_PS_OwnedByCompanyObjMapping__mdt/listViews/SMAX_PS_All_Owned_By_Company_Object_Mappings.listView-meta.xml
<ListView>
    <fullName>SMAX_PS_All_Owned_By_Company_Object_Mappings</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>SMAX_PS_SObject__c</columns>
    <columns>SMAX_PS_Primary_Field__c</columns>
    <columns>SMAX_PS_Primary_Field_Type__c</columns>
    <columns>SMAX_PS_Secondary_Field__c</columns>
    <columns>SMAX_PS_Secondary_Field_Type__c</columns>
    <columns>SMAX_PS_Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Owned By Company Object Mappings</label>
    <language>en_US</language>
</ListView>